Remove JavaFX integration

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,5 @@ rootProject.name = 'miop'
 include 'miop-common'
 include 'miop-jvm'
 
-include 'miop-javafx'
-
-
-project(':miop-common').projectDir = file('core/common')
-project(':miop-jvm').projectDir = file('core/jvm')
-
-project(':miop-javafx').projectDir = file('integration/javafx')
+project(':miop-common').projectDir = file('common')
+project(':miop-jvm').projectDir = file('jvm')
