--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,8 @@ rootProject.name = 'miop'
 
 include 'miop-common'
 include 'miop-jvm'
+include 'miop-javafx'
 
 project(':miop-common').projectDir = file('common')
 project(':miop-jvm').projectDir = file('jvm')
+project(':miop-javafx').projectDir = file('integration/javafx')
