--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
 
     testCompile "junit:junit:$junit_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit"
-    testCompile "org.jetbrains.kotlin:kotlin-test"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
 }
 
 test {
