--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -6,6 +6,5 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
 
-    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
+    testCompile project(':miop-internal-test-common')
 }
