--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -29,9 +29,7 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
 
     testCompile project(':miop-internal-test-jvm')
-    testCompile "junit:junit:$junit_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
 }
 
 test {
