--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -7,4 +7,6 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
 
     testCompile project(':miop-internal-test-common')
+    testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
 }
