--- a/core/jvm/build.gradle
+++ b/core/jvm/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 
     testCompile project(':miop-internal-test-jvm')
+    testCompile "junit:junit:$junit_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
 }
 
 test {
