--- a/internal/test/jvm/build.gradle
+++ b/internal/test/jvm/build.gradle
@@ -1,10 +1,13 @@
 apply plugin: 'kotlin-platform-jvm'
 apply plugin: 'java-library'
 
+kotlin.experimental.coroutines 'enable'
+
 dependencies {
     expectedBy project(":miop-internal-test-common")
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 
     implementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
