--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -37,5 +37,7 @@ dependencies {
 test {
     testLogging {
         events "passed", "skipped", "failed"
+
+        showStandardStreams = true
     }
 }
