--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -1,12 +1,7 @@
-apply plugin: 'kotlin-platform-common'
-
-kotlin.experimental.coroutines 'enable'
+apply from: rootProject.file('gradle/common.gradle')
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
-
     testCompile project(':miop-internal-test-common')
-    testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
+    
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:$coroutines_version"
 }
