--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -1,43 +1,10 @@
-apply plugin: 'kotlin-platform-jvm'
-
-kotlin.experimental.coroutines 'enable'
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.kotlin.srcDirs
-}
-
-task dokkaJavadoc(type: org.jetbrains.dokka.gradle.DokkaTask) {
-    outputFormat = "javadoc"
-    outputDirectory = "$buildDir/dokkaJavadoc"
-}
-
-task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
-    from dokkaJavadoc.outputDirectory
-    classifier = 'javadoc'
-}
-
-artifacts {
-    archives sourcesJar
-    archives javadocJar
-}
+apply from: rootProject.file('gradle/jvm.gradle')
 
 dependencies {
     compile project(':miop-jvm')
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     compile "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
 
     testCompile project(':miop-internal-test-jvm')
-    testCompile "junit:junit:$junit_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-}
-
-test {
-    testLogging {
-        showStandardStreams = true
-        exceptionFormat = 'full'
-        events "passed", "skipped", "failed"
-    }
 }
