--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -8,6 +8,7 @@ dependencies {
     testCompile "junit:junit:$junit_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    testCompile "com.nhaarman:mockito-kotlin:1.5.0"
 }
 
 test {
