--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,15 @@ rootProject.name = 'miop'
 include 'miop-common'
 include 'miop-jvm'
 
-project(':miop-common').projectDir = file('common')
-project(':miop-jvm').projectDir = file('jvm')
+include 'miop-javafx'
+
+include 'miop-internal-test-common'
+include 'miop-internal-test-jvm'
+
+project(':miop-common').projectDir = file('core/common')
+project(':miop-jvm').projectDir = file('core/jvm')
+
+project(':miop-javafx').projectDir = file('integration/javafx')
+
+project(':miop-internal-test-common').projectDir = file('internal/test/common')
+project(':miop-internal-test-jvm').projectDir = file('internal/test/jvm')
