--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -4,6 +4,7 @@ kotlin.experimental.coroutines 'enable'
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
