--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -10,6 +10,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+    testCompile 'org.mockito:mockito-core:2.19.0'
 }
 
 test {
