--- a/core/jvm/build.gradle
+++ b/core/jvm/build.gradle
@@ -3,7 +3,7 @@ apply from: rootProject.file('gradle/jvm.gradle')
 dependencies {
     expectedBy project(":miop-common")
 
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 
     testCompile project(':miop-internal-test-jvm')
 }
