--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'kotlin-platform-jvm'
+apply plugin: 'java-library'
 
 kotlin.experimental.coroutines 'enable'
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
