--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -1,10 +1,10 @@
 apply from: rootProject.file('gradle/jvm.gradle')
 
 dependencies {
-    compile project(':miop-jvm')
+    api project(':miop-jvm')
 
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
 
     testCompile project(':miop-internal-test-jvm')
 }
