--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -5,6 +5,8 @@ kotlin.experimental.coroutines 'enable'
 
 dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     testCompile "junit:junit:$junit_version"
