--- a/settings.gradle
+++ b/settings.gradle
@@ -2,16 +2,20 @@ rootProject.name = 'miop'
 
 include 'miop-common'
 include 'miop-jvm'
+include 'miop-js'
 
 include 'miop-javafx'
 
 include 'miop-internal-test-common'
 include 'miop-internal-test-jvm'
+include 'miop-internal-test-js'
 
 project(':miop-common').projectDir = file('core/common')
 project(':miop-jvm').projectDir = file('core/jvm')
+project(':miop-js').projectDir = file('core/js')
 
 project(':miop-javafx').projectDir = file('integration/javafx')
 
 project(':miop-internal-test-common').projectDir = file('internal/test/common')
 project(':miop-internal-test-jvm').projectDir = file('internal/test/jvm')
+project(':miop-internal-test-js').projectDir = file('internal/test/js')
