--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
-kotlin_version=1.2.50
-coroutines_version=0.23.3
-dokka_version=0.9.16
+kotlin_version=1.2.51
+coroutines_version=0.23.4
+dokka_version=0.9.17
 
 # Testing
 junit_version=4.12
 kluent_version=1.15
+mockito_version=2.19.1
+mockito_kotlin_version=1.6.0
