--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 
 allprojects {
     group 'com.github.jcornaz.miop'
-    version '0.0.4'
+    version '0.0.5-SNAPSHOT'
 
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'com.github.ben-manes.versions'
