--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-kotlin_version=1.2.51
-coroutines_version=0.24.0
+kotlin_version=1.3-M1
+coroutines_version=0.25.0-eap13
 dokka_version=0.9.17
 
 # Testing
