--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 allprojects {
     group 'com.github.jcornaz.miop'
-    version '0.0.5-SNAPSHOT'
+    version '0.1.0'
 
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'com.github.ben-manes.versions'
