Update dependencies (kotlin to 1.3-rc-57)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-kotlin_version=1.3-M2
-coroutines_version=0.26.0-eap13
+kotlin_version=1.3.0-rc-57
+coroutines_version=0.26.1-eap13
 dokka_version=0.9.17
 
 # Testing
