--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -7,3 +7,11 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
 }
+
+compileKotlinCommon {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
