--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -21,3 +21,11 @@ test {
         exceptionFormat = 'full'
     }
 }
+
+compileKotlin {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
