--- a/gradle/js.gradle
+++ b/gradle/js.gradle
@@ -7,3 +7,11 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
 }
+
+compileKotlin2Js {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
