--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -12,3 +12,11 @@ dependencies {
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable'
+        ]
+    }
+}
