Mark collection event subscriptions as experimental
Resolve #78

--- a/core/jvm/build.gradle
+++ b/core/jvm/build.gradle
@@ -9,7 +9,8 @@ dependencies {
 compileTestKotlin {
     kotlinOptions {
         freeCompilerArgs = [
-                '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable'
+                '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable',
+                '-Xuse-experimental=com.github.jcornaz.miop.collection.ExperimentalCollectionEvent'
         ]
     }
 }
