--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -7,7 +7,8 @@ dependencies {
 compileTestKotlinCommon {
     kotlinOptions {
         freeCompilerArgs = [
-                '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable'
+                '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable',
+                '-Xuse-experimental=com.github.jcornaz.miop.collection.ExperimentalCollectionEvent'
         ]
     }
 }
