--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -16,7 +16,7 @@ dependencies {
 
 test {
     testLogging {
-        events "passed", "skipped", "failed"
+        events "started", "passed", "skipped", "failed"
         showStandardStreams = true
         exceptionFormat = 'full'
     }
