--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,10 @@ include 'miop-js'
 
 include 'miop-javafx'
 
+include 'miop-collekt-common'
+include 'miop-collekt-js'
+include 'miop-collekt-jvm'
+
 include 'miop-internal-test-common'
 include 'miop-internal-test-jvm'
 include 'miop-internal-test-js'
@@ -15,6 +19,10 @@ project(':miop-jvm').projectDir = file('core/jvm')
 project(':miop-js').projectDir = file('core/js')
 
 project(':miop-javafx').projectDir = file('integration/javafx')
+
+project(':miop-collekt-common').projectDir = file('integration/collekt/common')
+project(':miop-collekt-js').projectDir = file('integration/collekt/js')
+project(':miop-collekt-jvm').projectDir = file('integration/collekt/jvm')
 
 project(':miop-internal-test-common').projectDir = file('internal/test/common')
 project(':miop-internal-test-jvm').projectDir = file('internal/test/jvm')
