--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,17 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
+  sonarcloud:
+    organization: "jcornaz-github"
 
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 before_install:
   - chmod +x gradlew
+
+script:
+  - ./gradlew check sonarqube
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
