--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,12 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.20.0'
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
     }
 }
+
+apply plugin: 'org.sonarqube'
 
 allprojects {
     group 'com.github.jcornaz.miop'
@@ -24,5 +27,13 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "miop"
+        property "sonar.organization", "jcornaz-github"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
