--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ allprojects {
 
 sonarqube {
     properties {
-        property "sonar.projectKey", "miop"
+        property "sonar.projectKey", "jcornaz_miop"
         property "sonar.organization", "jcornaz-github"
         property "sonar.host.url", "https://sonarcloud.io"
     }
