Unshallow clone on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
 
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+  - git fetch --unshallow --quiet
 
 before_install:
   - chmod +x gradlew
