--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: java
 
+git:
+  depth: false
+
 branches:
   only:
     - master
@@ -17,7 +20,6 @@ addons:
 
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
-  - git fetch --unshallow --quiet
 
 before_install:
   - chmod +x gradlew
