--- a/gradle/js.gradle
+++ b/gradle/js.gradle
@@ -15,3 +15,12 @@ compileKotlin2Js {
         ]
     }
 }
+
+compileTestKotlin2Js {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=kotlin.kotlinx.coroutines.ObsoleteCoroutinesApi',
+                '-Xuse-experimental=kotlin.kotlinx.coroutines.ExperimentalCoroutinesApi',
+        ]
+    }
+}
