--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -29,3 +29,12 @@ compileKotlin {
         ]
     }
 }
+
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs = [
+                '-Xuse-experimental=kotlin.kotlinx.coroutines.ObsoleteCoroutinesApi',
+                '-Xuse-experimental=kotlin.kotlinx.coroutines.ExperimentalCoroutinesApi',
+        ]
+    }
+}
