Address experimental level of JavaFx integration module

--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -19,8 +19,8 @@ compileKotlinCommon {
 compileTestKotlinCommon {
     kotlinOptions {
         freeCompilerArgs = [
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ObsoleteCoroutinesApi',
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
