--- a/gradle/js.gradle
+++ b/gradle/js.gradle
@@ -19,8 +19,8 @@ compileKotlin2Js {
 compileTestKotlin2Js {
     kotlinOptions {
         freeCompilerArgs = [
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ObsoleteCoroutinesApi',
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
