--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -33,8 +33,8 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions {
         freeCompilerArgs = [
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ObsoleteCoroutinesApi',
-                '-Xuse-experimental=kotlin.kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
