Disable experimental warning in tests

--- a/core/common/build.gradle
+++ b/core/common/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 
 compileTestKotlinCommon {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable',
                 '-Xuse-experimental=com.github.jcornaz.miop.collection.ExperimentalCollectionEvent'
         ]
