--- a/core/js/build.gradle
+++ b/core/js/build.gradle
@@ -8,7 +8,7 @@ dependencies {
 
 compileTestKotlin2Js {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=com.github.jcornaz.miop.property.ExperimentalSubscribable',
                 '-Xuse-experimental=com.github.jcornaz.miop.collection.ExperimentalCollectionEvent'
         ]
