--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -10,7 +10,7 @@ dependencies {
 
 compileKotlinCommon {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlin.Experimental'
         ]
     }
@@ -18,7 +18,7 @@ compileKotlinCommon {
 
 compileTestKotlinCommon {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
                 '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
