--- a/gradle/js.gradle
+++ b/gradle/js.gradle
@@ -10,7 +10,7 @@ dependencies {
 
 compileKotlin2Js {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlin.Experimental'
         ]
     }
@@ -18,7 +18,7 @@ compileKotlin2Js {
 
 compileTestKotlin2Js {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
                 '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
