--- a/integration/collekt/jvm/build.gradle
+++ b/integration/collekt/jvm/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 
 compileTestKotlin {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=com.github.jcornaz.miop.collection.ExperimentalCollectionEvent'
         ]
     }
