Migration to coroutines 1.0 (#105)
* Upgrade to coroutines 0.30.2 and replace usages of deprecated API
* Upgrade to coroutines 1.0 and Kotlin 1.3
* Fix compilation of tests
* Fix updater tests
* Stop using InternalCoroutinesApi
* Review experimental usages of kotlinx.coroutines in core
* Remove warnings for experimental API in test sources
* Address experimental level of JavaFx integration module
* Increase deprecation level to error for launchConsumeEach
* Address experimental status for JavaFx adapters
* Use coroutines 1.0.0 instead of 1.0.1
* Disable experimental warning in tests
* Replace last deprecated usages

--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -10,8 +10,17 @@ dependencies {
 
 compileKotlinCommon {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
+
+compileTestKotlinCommon {
+    kotlinOptions {
+        freeCompilerArgs += [
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
