--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-kotlin_version=1.3.0-rc-57
-coroutines_version=0.26.1-eap13
+kotlin_version=1.3.10
+coroutines_version=1.0.0
 dokka_version=0.9.17
 
 # Testing
