--- a/gradle/js.gradle
+++ b/gradle/js.gradle
@@ -10,8 +10,17 @@ dependencies {
 
 compileKotlin2Js {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
+
+compileTestKotlin2Js {
+    kotlinOptions {
+        freeCompilerArgs += [
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
