--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -24,8 +24,17 @@ test {
 
 compileKotlin {
     kotlinOptions {
-        freeCompilerArgs = [
+        freeCompilerArgs += [
                 '-Xuse-experimental=kotlin.Experimental'
+        ]
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        freeCompilerArgs += [
+                '-Xuse-experimental=kotlinx.coroutines.ExperimentalCoroutinesApi',
+                '-Xuse-experimental=kotlinx.coroutines.ObsoleteCoroutinesApi'
         ]
     }
 }
