--- a/integration/collekt/common/build.gradle
+++ b/integration/collekt/common/build.gradle
@@ -2,7 +2,7 @@ apply from: rootProject.file('gradle/common.gradle')
 
 dependencies {
     compile project(':miop-common')
-    compile 'com.github.jcornaz.collekt:collekt-core-common:0.0.2'
+    compile 'com.github.jcornaz.collekt:collekt-api-common:0.0.3'
 
     testCompile project(':miop-internal-test-common')
 }
