--- a/integration/collekt/common/build.gradle
+++ b/integration/collekt/common/build.gradle
@@ -2,9 +2,10 @@ apply from: rootProject.file('gradle/common.gradle')
 
 dependencies {
     compile project(':miop-common')
-    compile 'com.github.jcornaz.collekt:collekt-api-common:0.0.3'
+    compile "com.github.jcornaz.collekt:collekt-api-common:$collekt_version"
 
     testCompile project(':miop-internal-test-common')
+    testCompile "com.github.jcornaz.collekt:collekt-core-common:$collekt_version"
 }
 
 compileTestKotlinCommon {
