Lower the dependency on collekt (#106)
* Lower the dependency on collekt
* Fix collekt dependency for tests

--- a/integration/collekt/jvm/build.gradle
+++ b/integration/collekt/jvm/build.gradle
@@ -4,9 +4,10 @@ dependencies {
     expectedBy project(":miop-collekt-common")
 
     api project(':miop-jvm')
-    api 'com.github.jcornaz.collekt:collekt-core-jvm8:0.0.2'
+    api "com.github.jcornaz.collekt:collekt-api-jvm:$collekt_version"
 
     testCompile project(':miop-internal-test-jvm')
+    testCompile "com.github.jcornaz.collekt:collekt-core-jvm:$collekt_version"
 }
 
 compileTestKotlin {
