--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ dokka_version=0.9.17
 collekt_version=0.0.3
 
 # Testing
-junit_version=4.12
+junit_version=4.13-beta-1
 kluent_version=1.15
-mockito_version=2.22.0
+mockito_version=2.23.4
 mockito_kotlin_version=1.6.0
