--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -2,7 +2,9 @@ apply from: rootProject.file('gradle/jvm.gradle')
 
 dependencies {
     api project(':miop-jvm')
-    api 'com.github.jcornaz.collekt:collekt-core-jvm8:0.0.2'
+
+    api "com.github.jcornaz.collekt:collekt-api-jvm:$collekt_version"
+    implementation "com.github.jcornaz.collekt:collekt-core-jvm:$collekt_version"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:$coroutines_version"
 
