--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -10,8 +10,9 @@ dependencies {
     testCompile "junit:junit:$junit_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile "com.nhaarman:mockito-kotlin:$mockito_kotlin_version"
+    testCompile "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
     testCompile "org.mockito:mockito-core:$mockito_version"
+    testCompile "org.amshove.kluent:kluent:$kluent_version"
 }
 
 test {
