Add parallelMap and parallelFilter (#112)
* Add parallelMap and parallelFilter
* Fix tests
* Add comments and update changelog
* Fix uncaught exceptions
* Don't throw cancellation without exceptions
* Stop extending AsyncTest for parallelOperatorTest
* Adjust test timeouts
* Use count in parallelOperator Test
* Make sur to close the channel with exception in case of error

--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -17,9 +17,15 @@ dependencies {
 
 test {
     testLogging {
-        events "started", "passed", "skipped", "failed"
+        events "skipped", "failed"
         showStandardStreams = true
         exceptionFormat = 'full'
+
+        afterSuite { desc, result ->
+            if (!desc.parent) { // will match the outermost suite
+                println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            }
+        }
     }
 }
 
