Add kluent to common module

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ kotlin_version=1.3.10
 coroutines_version=1.0.0
 dokka_version=0.9.17
 collekt_version=0.0.3
+kluen_version=1.44
 
 # Testing
 junit_version=4.13-beta-1
