--- a/gradle/common.gradle
+++ b/gradle/common.gradle
@@ -6,6 +6,7 @@ dependencies {
 
     testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
+    testCompile "org.amshove.kluent:kluent-common:$kluent_version"
 }
 
 compileKotlinCommon {
