--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+        maven { url 'https://dl.bintray.com/markusamshove/maven' }
     }
 }
 
