Move version management to buildSrc

--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Version.KOTLIN}"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:${Version.DOKKA}"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
     }
