--- a/gradle/jvm.gradle
+++ b/gradle/jvm.gradle
@@ -2,17 +2,17 @@ apply plugin: 'kotlin-platform-jvm'
 apply plugin: 'java-library'
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib:${Version.KOTLIN}"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:${Version.COROUTINES}"
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:${Version.KOTLIN}"
 
-    testCompile "junit:junit:$junit_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-    testCompile "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin_version"
-    testCompile "org.mockito:mockito-core:$mockito_version"
-    testCompile "org.amshove.kluent:kluent:$kluent_version"
+    testCompile "junit:junit:${Version.JUNIT}"
+    testCompile "org.jetbrains.kotlin:kotlin-test-junit:${Version.KOTLIN}"
+    testCompile "org.jetbrains.kotlin:kotlin-test:${Version.KOTLIN}"
+    testCompile "com.nhaarman.mockitokotlin2:mockito-kotlin:${Version.MOCKITO_KOTLIN}"
+    testCompile "org.mockito:mockito-core:${Version.MOCKITO}"
+    testCompile "org.amshove.kluent:kluent:${Version.KLUENT}"
 }
 
 test {
@@ -22,7 +22,7 @@ test {
         exceptionFormat = 'full'
 
         afterSuite { desc, result ->
-            if (!desc.parent) { // will match the outermost suite
+            if (!desc.parent) {
                 println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
             }
         }
