--- a/internal/test/js/build.gradle
+++ b/internal/test/js/build.gradle
@@ -3,5 +3,5 @@ apply from: rootProject.file('gradle/js.gradle')
 dependencies {
     expectedBy project(":miop-internal-test-common")
 
-    compile "org.jetbrains.kotlin:kotlin-test-js:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-test-js:${Version.KOTLIN}"
 }
