--- a/internal/test/jvm/build.gradle
+++ b/internal/test/jvm/build.gradle
@@ -3,5 +3,5 @@ apply from: rootProject.file('gradle/jvm.gradle')
 dependencies {
     expectedBy project(":miop-internal-test-common")
 
-    compile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-test-junit:${Version.KOTLIN}"
 }
