--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'org.sonarqube'
 
 allprojects {
     group 'com.github.jcornaz.miop'
-    version '0.3.0'
+    version '0.3.1-SNAPSHOT'
 
     apply plugin: 'org.jetbrains.dokka'
     apply plugin: 'com.github.ben-manes.versions'
