--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,10 @@ addons:
   sonarcloud:
     organization: "jcornaz-github"
 
+jdk:
+  - oraclejdk8
+  - oraclejdk11
+
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
