--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -8,6 +8,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:${Version.COROUTINES}"
 
+    compileOnly "org.openjfx:javafx-controls:${Version.JAVAFX}"
+
     testCompile project(':miop-internal-test-jvm')
 }
 
