Add build matrix for travis (#123)
* Add build matrix for travis
* Explicitly add javafx in compile classpath
* Use JavaFx plugin for gradle
* Only build using JDK 11 (which is the only stable JDK with public updates at the moment)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ addons:
   sonarcloud:
     organization: "jcornaz-github"
 
+jdk:
+  - oraclejdk11
+
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
