--- a/integration/javafx/build.gradle
+++ b/integration/javafx/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'org.openjfx.javafxplugin' version '0.0.7'
+}
+
 apply from: rootProject.file('gradle/jvm.gradle')
 
 dependencies {
@@ -9,6 +13,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:${Version.COROUTINES}"
 
     testCompile project(':miop-internal-test-jvm')
+}
+
+javafx {
+    version = Version.JAVAFX
+    modules = [ 'javafx.graphics' ]
 }
 
 compileKotlin {
